[project]
name = "schedule-free-experiment"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "atsushi", email = "green515tea@gmail.com" }
]
dependencies = [
    "torch>=2.5.1",
    "schedulefree>=1.4",
    "torch_geometric>=2.6.1",
    "scipy>=1.14.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/schedule_free_experiment"]
